<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android = "http://schemas.android.com/apk/res/android">

    <item
        android:id = "@id/navigation_home"
        android:icon = "@drawable/time"
        android:title = "@string/title_home"/>

    <item
        android:id = "@id/navigation_compass"
        android:title = "@string/compass"
        android:icon = "@drawable/compass"/>

    <item
        android:id = "@id/navigation_quran"
        android:title = "@string/quran"
        android:icon = "@drawable/ic_quran"/>

    <item
        android:id = "@id/navigation_more"
        android:title = "@string/more"
        android:icon = "@drawable/ic_more_horizontal"/>

    <item
        android:id = "@id/navigation_setting"
        android:title = "@string/title_activity_settings"
        android:icon = "@drawable/settings"/>
</menu>