<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/widget"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/widgetbackground"
    android:clickable="true"
    android:focusable="true"
    android:padding="3dp"
    android:theme="@style/Theme.Nimaz">

    <LinearLayout
        android:id="@+id/fajrwidgethighlight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/widgethighlight"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/nunito"
            android:text="@string/fajr"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/Fajr_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:fontFamily="@font/nunito"
            android:text="@string/fajr_time"
            android:textSize="14sp"
            android:textStyle="bold"
            tools:text="3:46 am" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/zuharwidgethighlight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:background="@drawable/widgethighlight"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/nunito"
            android:text="@string/zuhar"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/Zuhar_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:fontFamily="@font/nunito"
            android:text="@string/Zuhar_time"
            android:textSize="14sp"
            android:textStyle="bold"
            tools:text="3:46 am" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/asarwidgethighlight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:background="@drawable/widgethighlight"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/nunito"
            android:text="@string/asar"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/Asar_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:fontFamily="@font/nunito"
            android:text="@string/Asar_time"
            android:textSize="14sp"
            android:textStyle="bold"
            tools:text="3:46 am" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/maghribwidgethighlight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:background="@drawable/widgethighlight"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/nunito"
            android:text="@string/maghrib"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/Maghrib_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:fontFamily="@font/nunito"
            android:text="@string/Maghrib_time"
            android:textSize="14sp"
            android:textStyle="bold"
            tools:text="3:46 am" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ishaawidgethighlight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:background="@drawable/widgethighlight"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/nunito"
            android:text="@string/ishaa"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/Ishaa_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:fontFamily="@font/nunito"
            android:text="@string/Ishaa_time"
            android:textSize="14sp"
            android:textStyle="bold"
            tools:text="10:46 am" />
    </LinearLayout>

</LinearLayout>