<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android = "http://schemas.android.com/apk/res/android"
                                                   xmlns:app = "http://schemas.android.com/apk/res-auto"
                                                   android:layout_width = "match_parent"
                                                   android:layout_height = "wrap_content"
                                                   android:orientation = "vertical"
                                                   android:padding = "10dp">

    <LinearLayout
        android:layout_width = "240dp"
        android:layout_height = "186dp"
        android:orientation = "vertical"
        app:layout_constraintBottom_toBottomOf = "parent"
        app:layout_constraintEnd_toEndOf = "parent"
        app:layout_constraintStart_toStartOf = "parent"
        app:layout_constraintTop_toTopOf = "parent">

        <TextView
            android:id = "@+id/textView2"
            android:layout_width = "176dp"
            android:layout_height = "wrap_content"
            android:layout_gravity = "center"
            android:fontFamily = "@font/nunito"
            android:gravity = "center"
            android:text = "@string/location"
            android:textColor = "#000000"
            android:textSize = "24sp"/>

        <TextView
            android:id = "@+id/textView9"
            android:layout_width = "240dp"
            android:layout_height = "39dp"
            android:layout_gravity = "center"
            android:fontFamily = "@font/nunito"
            android:gravity = "center"
            android:text = "@string/please_enter_your_city_name"
            android:textColor = "#000000"
            android:textSize = "18sp"/>

        <EditText
            android:id = "@+id/city"
            android:layout_width = "match_parent"
            android:layout_height = "48dp"
            android:layout_gravity = "center"
            android:fontFamily = "@font/nunito"
            android:hint = "@string/city"
            android:importantForAutofill = "no"
            android:inputType = "text"
            android:padding = "10dp"
            android:singleLine = "true"/>

        <LinearLayout
            android:layout_width = "240dp"
            android:layout_height = "wrap_content"
            android:layout_gravity = "center"
            android:layout_marginTop = "10dp"
            android:gravity = "center"
            android:orientation = "horizontal">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width = "match_parent"
                android:layout_height = "match_parent">

                <Button
                    android:id = "@+id/dialogCancel"
                    style = "@style/Base.Widget.AppCompat.Button.Colored"
                    android:layout_width = "wrap_content"
                    android:layout_height = "48dp"
                    android:layout_margin = "5dp"
                    android:fontFamily = "@font/nunito"
                    android:text = "@string/cancel"
                    android:textAllCaps = "false"
                    android:textColor = "#000000"
                    app:cornerRadius = "5dp"
                    app:layout_constraintBottom_toBottomOf = "parent"
                    app:layout_constraintStart_toStartOf = "parent"
                    app:layout_constraintTop_toTopOf = "parent"/>

                <Button
                    android:id = "@+id/dialogSubmit"
                    style = "@style/Base.Widget.AppCompat.Button.Colored"
                    android:layout_width = "wrap_content"
                    android:layout_height = "48dp"
                    android:layout_margin = "5sp"
                    android:fontFamily = "@font/nunito"
                    android:text = "@string/submit"
                    android:textAllCaps = "false"
                    android:textColor = "#000000"
                    app:cornerRadius = "5dp"
                    app:layout_constraintBottom_toBottomOf = "parent"
                    app:layout_constraintEnd_toEndOf = "parent"
                    app:layout_constraintTop_toTopOf = "parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>