<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android = "http://schemas.android.com/apk/res/android"
                                                   xmlns:app = "http://schemas.android.com/apk/res-auto"
                                                   android:layout_width = "match_parent"
                                                   android:layout_height = "wrap_content"
                                                   android:background = "?attr/cardBackground"
                                                   android:orientation = "vertical"
                                                   android:padding = "10dp">

    <TextView
        android:id = "@+id/number"
        android:layout_width = "wrap_content"
        android:layout_height = "wrap_content"
        android:layout_marginStart = "8dp"
        android:fontFamily = "@font/nunito"
        android:text = "@string/_1point"
        android:textSize = "18sp"
        android:textStyle = "bold"
        app:layout_constraintBottom_toBottomOf = "parent"
        app:layout_constraintStart_toStartOf = "parent"
        app:layout_constraintTop_toTopOf = "parent"
        app:layout_constraintVertical_bias = "0.503"/>

    <TextView
        android:id = "@+id/textView22"
        android:layout_width = "wrap_content"
        android:layout_height = "wrap_content"
        android:fontFamily = "@font/nunito"
        android:text = ": "
        android:textSize = "24sp"
        app:layout_constraintBottom_toBottomOf = "parent"
        app:layout_constraintStart_toEndOf = "@+id/number"
        app:layout_constraintTop_toTopOf = "parent"
        app:layout_constraintVertical_bias = "0.503"/>

    <TextView
        android:id = "@+id/ArabicName"
        android:layout_width = "wrap_content"
        android:layout_height = "wrap_content"
        android:background = "@drawable/arabic_name_card"
        android:fontFamily = "@font/nunito"
        android:gravity = "center"
        android:padding = "15dp"
        android:text = "@string/arabic_name"
        android:textSize = "30sp"
        app:layout_constraintBottom_toTopOf = "@+id/Translation"
        app:layout_constraintEnd_toEndOf = "parent"
        app:layout_constraintStart_toStartOf = "parent"
        app:layout_constraintTop_toBottomOf = "@+id/EnglishName"
        app:layout_constraintVertical_bias = "0.0"/>

    <TextView
        android:id = "@+id/EnglishName"
        android:layout_width = "0dp"
        android:layout_height = "wrap_content"
        android:layout_marginTop = "16dp"
        android:fontFamily = "@font/nunito"
        android:text = "@string/english_name"
        android:textSize = "18sp"
        android:textStyle = "bold"
        app:layout_constraintEnd_toEndOf = "parent"
        app:layout_constraintStart_toEndOf = "@+id/textView22"
        app:layout_constraintTop_toTopOf = "parent"/>

    <TextView
        android:id = "@+id/Translation"
        android:layout_width = "0dp"
        android:layout_height = "match_parent"
        android:layout_marginBottom = "8dp"
        android:fontFamily = "@font/nunito"
        android:text = "@string/translation"
        android:textSize = "14sp"
        android:textStyle = "bold"
        app:layout_constraintBottom_toBottomOf = "parent"
        app:layout_constraintEnd_toEndOf = "parent"
        app:layout_constraintStart_toEndOf = "@+id/textView22"/>
</androidx.constraintlayout.widget.ConstraintLayout>